Animações pelo site

--- a/components/Banner/Banner.css
+++ b/components/Banner/Banner.css
@@ -1,3 +1,11 @@
+.hidden {
+    opacity: 0;
+}
+
+.visible {
+    opacity: 1;
+}
+
 .banner-container {
     background-color: var(--background-color-secondary);
     height: 668px;
