--- a/components/About/About.css
+++ b/components/About/About.css
@@ -1,3 +1,15 @@
+.hidden {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
 .company-container {
     width: 100%;
     margin: 0 auto;
