--- a/components/About/About.css
+++ b/components/About/About.css
@@ -66,6 +66,15 @@
     flex-direction: column;
     gap: 2.5rem;
     padding-right: 93px;
+    border-radius: 6px;
+    align-items: start;
+}
+
+
+
+.procect-video {
+    border-radius: 8px;
+    width: 591px;
 }
 
 .institutional-video span {
@@ -125,10 +134,7 @@
 
 @media screen and (max-width: 1280px) {
 
-    .video {
-        border-radius: 8px;
-        width: 100%;
-    }
+  
 
     .video img {
         border-radius: 0.375rem;
@@ -144,15 +150,20 @@
 
 @media screen and (max-width: 1090px) {
 
-   
+    .procect-video{   
+        width: 100%;
+        height: 100%;
+    }
 
     .company-content {
         flex-direction: column;
         margin-bottom: 5rem;
     }
 
-    .institutional-video{
+    .institutional-video {
         padding-left: 93px;
+        width: 100%;
+        align-items: start;
     }
 
     .video img {
@@ -250,7 +261,7 @@
 .institutional-video {
     display: flex;
     justify-content: flex-end;
-    align-items: center; 
+    align-items: start; 
     margin-top: 20px; 
   }
   
