--- a/components/Process/Process.css
+++ b/components/Process/Process.css
@@ -46,6 +46,7 @@
     border: 1px solid rgba(255, 255, 255, 0.30);
     background: rgba(255, 255, 255, 0.30);
     backdrop-filter: blur(18.545454025268555px);
+    
 }
 
 /* .process-step-button:first-child {
@@ -62,9 +63,6 @@
     width: 100%;
     cursor: pointer; 
     transition: background-color 0.3s ease;
-      
-    
-    
 }
 
 .process-step-text {
@@ -78,12 +76,12 @@
     display: none;
 }
 
-.lottie-animation-container {
+.lottie-animation-container .lottie-animation img{
     max-width: 634px;
     height: 489px;
     width: 100%;
     border-radius: 12.538px;
-    background-color: #ffffff;
+    
 }
 
 @media screen and (max-width: 1179px) {
@@ -108,10 +106,10 @@
 
     .lottie-animation-container {
         max-width: 634px;
-        min-height: 573px;
+        min-height: 488px;
         width: 100%;
         border-radius: 12.538px;
-        background-color: #ffffff;
+        
     }
 
 }
@@ -123,7 +121,11 @@
     }
 
     .lottie-animation-container {
-        display: none;
+        display: flex;
+    }
+
+    .process-steps-container {
+        flex-direction: column;
     }
 
     .process-step-button {
@@ -139,13 +141,15 @@
         min-height: 573px;
         width: 100%;
         border-radius: 12.538px;
-        background-color: #ffffff;
+        /* background-color: #ffffff; */
         margin-bottom: 1.5rem;
+       
     }
 
 }
 
 @media screen and (max-width: 768px) {
+
     .process-content {
         display: flex;
         flex-direction: column;
@@ -154,6 +158,10 @@
         width: 100%;
         padding: 6.5rem 1.25rem;
         /* margin-bottom: 5.875rem; */
+    }
+
+    .process-step-button {
+        height: 100%;
     }
     
 }
