--- a/components/MenuMobile/Menumobile.css
+++ b/components/MenuMobile/Menumobile.css
@@ -97,8 +97,6 @@
         border: none;
     }
     
-  
-
     .menu-mobile-button p {
         color: var(--text-color-primary);
         font-size: 1rem;
@@ -119,6 +117,10 @@
         font-weight: 400;
         text-decoration: none;
         
+    }
+
+    .button-contact button {
+        color: var(--text-color-secondary);
     }
 
     .menu-mobile-site-map {
